# temp-fhe-transciphering

./: .gitignore  README.md  requirements.txt  workload_specification.md
draft_submission/: Cargo.toml  readme.md
draft_submission/FFT-based-CircuitBootstrap/: Cargo.toml
draft_submission/FFT-based-CircuitBootstrap/src/: automorphism.rs  fourier_glwe_keyswitch.rs
draft_submission/src/: client.rs  harness.rs  main.rs  server.rs
harness/: aes_keygen_and_encrypt.py  cleartext_impl.py  generate_dataset.py  params.py  run_submission.py  utils.py  verify_aes_decryption.py  verify_result.py
submission/: Cargo.toml
submission/cbs_lib/: Cargo.toml
submission/cbs_lib/src/: aes_he.rs  aes_ref.rs  automorphism.rs  ggsw_conv.rs  glwe_keyswitch.rs  keygen.rs
submission/src/: aes_manager.rs  data_struct.rs  help_fun.rs  lib.rs
