[package]
name = "transciphering"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-base-conv = { version = "0.1.0", path="./FFT-based-CircuitBootstrap"}
tfhe = { version = "0.5.3", features = ["boolean", "shortint", "x86_64-unix"] }
rand = { version = "*" }
chrono = { version = "0.4" }
aligned-vec = { version = "0.5.0" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
aes = "0.8.4"

